--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Whiskey Drop | Taste a new whiskey every month</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,6 +15,14 @@
 </head>
 
 <body>
+    <article class="container">
+        <!-- Callout -->
+        <section class="callout">
+            <h1>The finest whiskeys delivered to your doorstep.</h1>
+            <p>Sign up today to start recieving the world's best whiskeys every month. First one is free!</p>
+        </section>
+    </article>
+
     <h1>This is a test</h1>
     <p>Hello, World!</p>
     <button>Click me!</button>
