--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
 
 <body>
     <article class="container">
+
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
             <p>Sign up today to start recieving the world's best whiskeys every month. First one is free!</p>
         </section>
+        <hr>
+
+        <!-- Quotes -->
+        <section class="quotes">
+            <h2 class="text-uppercase">Quotes:</h2>
+            <div class="quote">
+                <p>I've been introduced to more than 10 great international whiskeys I never knew about!</p>
+                <p>- Jane Doe</p>
+            </div>
+            <div class="quote">
+                <p>I haven't been sober for months!</p>
+                <p>- John Smith</p>
+            </div>
+        </section>
+        
     </article>
 
     <h1>This is a test</h1>
