Add features section and removed old test code

--- a/index.html
+++ b/index.html
@@ -36,12 +36,35 @@
                 <p>- John Smith</p>
             </div>
         </section>
-        
-    </article>
+        <hr>
 
-    <h1>This is a test</h1>
-    <p>Hello, World!</p>
-    <button>Click me!</button>
+        <section class="features">
+            <h2>Features:</h2>
+            <div class="feature">
+                <h3>Feature 1:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
+                    similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis est! Atque
+                    quasi iure dolorum reprehenderit consequatur.</p>
+            </div>
+
+            <div class="feature">
+                <h3>Feature 2:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur cupiditate!
+                    Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque repellendus
+                    cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
+            </div>
+
+            <div class="feature">
+                <h3>Feature 3:</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis doloremque
+                    corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur impedit
+                    autem ipsum quod harum.</p>
+            </div>
+        </section>
+        <hr>
+
+    </article>
+    
 </body>
 
 </html>
