--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start recieving the world's best whiskeys every month. First one is free!</p>
+            <p>Sign up today to start recieving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>First one is
+                        free!</mark></strong></p>
         </section>
         <hr>
 
@@ -64,7 +65,7 @@
         <hr>
 
     </article>
-    
+
 </body>
 
 </html>
