--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h1>The finest whiskeys delivered to your doorstep.</h1>
             <p class="lead">Sign up today to start recieving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>First one is
                         free!</mark></strong></p>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
         </section>
         <hr>
 
