Make section headers uppercase

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <hr>
 
         <section class="features">
-            <h2>Features:</h2>
+            <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1:</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
