--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </section>
         <hr>
 
+        <!-- Features -->
         <section class="features">
             <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
@@ -49,6 +50,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
                     similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis est! Atque
                     quasi iure dolorum reprehenderit consequatur.</p>
+                    <p><a class="btn btn-sm btn-light">Read More</a></p>
             </div>
 
             <div class="feature">
@@ -56,6 +58,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur cupiditate!
                     Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque repellendus
                     cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
+                    <p><a class="btn btn-sm btn-light">Read More</a></p>
             </div>
 
             <div class="feature">
@@ -63,6 +66,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis doloremque
                     corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur impedit
                     autem ipsum quod harum.</p>
+                    <p><a class="btn btn-sm btn-light">Read More</a></p>
             </div>
         </section>
         <hr>
