--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <blockquote class="blockquote">
                         <p>I've been introduced to more than 10 great international whiskeys I never knew about!</p>
                         <p>- Jane Doe</p>
                     </blockquote>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <blockquote class="blockquote">
                         <p>I haven't been sober for months!</p>
                         <p>- John Smith</p>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <div class="feature">
                         <h3>Feature 1:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
@@ -80,7 +80,7 @@
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <div class="feature">
                         <h3>Feature 2:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur cupiditate!
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 d-md-none">
                     <div class="feature">
                         <h3>Feature 3:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
