--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
                         <h3>Feature 1:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
@@ -80,7 +80,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
                         <h3>Feature 2:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur cupiditate!
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 d-md-none">
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
                         <h3>Feature 3:</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
