--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+        <a href="/" class="navbar-brand">Whiskey Drop</a>
+        <ul class="navbar-nav me-auto">
+            <li class="active nav-item me-2"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item me-2"><a class="nav-link" href="/about">About</a></li>
+        </ul>
+        <p class="navbar-text my-auto me-2"><i>Great whiskey to your door!</i></p>
+        <a href="/login">Sign In / Sign Up</a>
+    </nav>
+
     <article class="container">
 
         <!-- Callout -->
