--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <ul class="navbar-nav me-auto">
             <li class="active nav-item me-2"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item me-2"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item me-2 d-block d-sm-none"><a class="nav-link" href="/logon">Sign In / Sign Up</a></li>
         </ul>
-        <p class="navbar-text my-auto me-2"><i>Great whiskey to your door!</i></p>
-        <a href="/login">Sign In / Sign Up</a>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto me-2"><i>Great whiskey to your door!</i></p>
+            <a href="/login">Sign In / Sign Up</a>
+        </div>
     </nav>
 
     <article class="container">
