--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-light bg-light navbar-expand-sm">
-        <a href="/" class="navbar-brand">Whiskey Drop</a>
+    <nav class="navbar bg-light navbar-expand-sm">
+        <a href="/" class="navbar-brand ms-4">Whiskey Drop</a>
         <ul class="navbar-nav me-auto">
             <li class="active nav-item me-2"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item me-2"><a class="nav-link" href="/about">About</a></li>
             <li class="nav-item me-2 d-block d-sm-none"><a class="nav-link" href="/logon">Sign In / Sign Up</a></li>
         </ul>
-        <div class="d-none d-md-block">
-            <p class="navbar-text my-auto me-2"><i>Great whiskey to your door!</i></p>
+        <div class="d-none d-md-block me-4">
             <a href="/login">Sign In / Sign Up</a>
         </div>
     </nav>
