Add jumbrotron to callout section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar bg-light navbar-expand-sm">
         <a href="/" class="navbar-brand ms-4">Whiskey Drop</a>
         <ul class="navbar-nav me-auto">
-            <li class="active nav-item me-2"><a class="nav-link" href="/">Home</a></li>
+            <li class="active nav-item me-2"><a class="nav-link active" href="/">Home</a></li>
             <li class="nav-item me-2"><a class="nav-link" href="/about">About</a></li>
             <li class="nav-item me-2 d-block d-sm-none"><a class="nav-link" href="/logon">Sign In / Sign Up</a></li>
         </ul>
@@ -28,12 +28,12 @@
         </div>
     </nav>
 
-    <article class="container">
+    <article class="container mt-3">
 
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout">
+                <section class="callout container-fluid bg-light rounded-2 p-5">
                     <h1>The finest whiskeys delivered to your doorstep.</h1>
                     <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
                         <s>£19.99</s>
