--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout container-fluid bg-light rounded-2 p-5">
+                <section class="callout container-fluid bg-light rounded-2 p-5 text-center">
                     <h1>The finest whiskeys delivered to your doorstep.</h1>
                     <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
-                        <s>£19.99</s>
+                        <s class="d-none d-sm-inline">£19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>First one is
                                 free!</mark></strong></p>
 
