--- a/index.html
+++ b/index.html
@@ -7,120 +7,144 @@
 
     <title>Whiskey Drop | Taste a new whiskey every month</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
     </script>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar bg-light navbar-expand-sm">
-        <a href="/" class="navbar-brand ms-4">Whiskey Drop</a>
-        <ul class="navbar-nav me-auto">
-            <li class="active nav-item me-2"><a class="nav-link active" href="/">Home</a></li>
-            <li class="nav-item me-2"><a class="nav-link" href="/about">About</a></li>
-            <li class="nav-item me-2 d-block d-sm-none"><a class="nav-link" href="/logon">Sign In / Sign Up</a></li>
+    <nav class="navbar navbar-light navbar-expand-sm bg-light">
+        <a href="/" class="navbar-brand">
+            Whiskey Drop</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
+            <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
         </ul>
-        <div class="d-none d-md-block me-4">
+
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
             <a href="/login">Sign In / Sign Up</a>
         </div>
-    </nav>
+        <!--</div>-->
+        </nav>
 
-    <article class="container mt-3">
+        <article class="container mt-3">
 
-        <!-- Callout -->
-        <div class="row">
-            <div class="col-12">
-                <section class="callout container-fluid bg-light rounded-2 p-5 text-center">
-                    <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
-                        <s class="d-none d-sm-inline">£19.99</s>
-                        <span class="d-inline d-sm-none"><br></span>
-                        <strong><mark>First one is
-                                free!</mark></strong></p>
-
-                    <button class="btn btn-success btn-lg">Sign up!</button>
-                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
-                            responsibly.</small></p>
-                </section>
-            </div>
-        </div>
-        <hr>
-
-        <!-- Quotes -->
-        <section class="quotes">
+            <!-- Callout -->
             <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Quotes:</h2>
+                <div class="col-12">
+                    <section class="callout jumbotron text-center">
+                        <h1>The finest whiskeys delivered to your doorstep.</h1>
+                        <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
+                            <s class="d-none d-sm-inline">£19.99</s>
+                            <span class="d-inline d-sm-none"><br></span>
+                            <strong><mark>First one is
+                                    free!</mark></strong></p>
+
+                        <button class="btn btn-success btn-lg">Sign up!</button>
+                        <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
+                                responsibly.</small></p>
+                    </section>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I've been introduced to more than 10 great international whiskeys I never knew about!</p>
-                        <p>- Jane Doe</p>
-                    </blockquote>
-                </div>
-                <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I haven't been sober for months!</p>
-                        <p>- John Smith</p>
-                    </blockquote>
-                </div>
-            </div>
-        </section>
-        <hr>
+            <hr>
 
-        <!-- Features -->
-        <section class="features">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Features:</h2>
+            <!-- Quotes -->
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 my-5">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                    </div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/girl-image.png" alt="image of a woman"
+                                    class="rounded-circle mr-3" height="100" width="100">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I've been introduced to more than 10 great international whiskeys I never knew
+                                        about!
+                                    </p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="assets/images/guy-image.png" alt="image of a man" class="rounded-circle mr-3"
+                                    height="100" width="100">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- John Smith</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
 
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 1:</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium, fugiat
-                            similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
-                            est!
-                            Atque
-                            quasi iure dolorum reprehenderit consequatur.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+            <!-- Features -->
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 my-5">
+                        <h2 class="text-uppercase">Features:</h2>
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 2:</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur cupiditate!
-                            Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
-                            repellendus
-                            cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3>Feature 1:</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
+                                fugiat
+                                similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
+                                est!
+                                Atque
+                                quasi iure dolorum reprehenderit consequatur.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3>Feature 2:</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
+                                cupiditate!
+                                Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
+                                repellendus
+                                cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3>Feature 3:</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
+                                doloremque
+                                corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
+                                impedit
+                                autem ipsum quod harum.</p>
+                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        </div>
                     </div>
                 </div>
+            </section>
+            <hr>
 
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 3:</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
-                            doloremque
-                            corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
-                            impedit
-                            autem ipsum quod harum.</p>
-                        <p><a class="btn btn-sm btn-light">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <hr>
-
-    </article>
+        </article>
 
 </body>
 
