--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
     </script>
+    <script src="https://kit.fontawesome.com/92b8c3a44a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,121 +31,121 @@
             <a href="/login">Sign In / Sign Up</a>
         </div>
         <!--</div>-->
-        </nav>
+    </nav>
 
-        <article class="container mt-3">
+    <article class="container mt-3">
 
-            <!-- Callout -->
+        <!-- Callout -->
+        <div class="row">
+            <div class="col-12">
+                <section class="callout jumbotron text-center">
+                    <h1>The finest whiskeys delivered to your doorstep.</h1>
+                    <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
+                        <s class="d-none d-sm-inline">£19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>First one is
+                                free!</mark></strong></p>
+
+                    <button class="btn btn-success btn-lg">Sign up!</button>
+                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
+                            responsibly.</small></p>
+                </section>
+            </div>
+        </div>
+        <hr>
+
+        <!-- Quotes -->
+        <section class="quotes">
             <div class="row">
-                <div class="col-12">
-                    <section class="callout jumbotron text-center">
-                        <h1>The finest whiskeys delivered to your doorstep.</h1>
-                        <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
-                            <s class="d-none d-sm-inline">£19.99</s>
-                            <span class="d-inline d-sm-none"><br></span>
-                            <strong><mark>First one is
-                                    free!</mark></strong></p>
-
-                        <button class="btn btn-success btn-lg">Sign up!</button>
-                        <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
-                                responsibly.</small></p>
-                    </section>
+                <div class="col-12 my-5">
+                    <h2 class="text-uppercase">Quotes:</h2>
                 </div>
             </div>
-            <hr>
-
-            <!-- Quotes -->
-            <section class="quotes">
-                <div class="row">
-                    <div class="col-12 my-5">
-                        <h2 class="text-uppercase">Quotes:</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <div class="media">
-                            <div class="d-none d-sm-block">
-                                <img src="assets/images/girl-image.png" alt="image of a woman"
-                                    class="rounded-circle mr-3" height="100" width="100">
-                            </div>
-                            <div class="media-body">
-                                <blockquote class="blockquote">
-                                    <p>I've been introduced to more than 10 great international whiskeys I never knew
-                                        about!
-                                    </p>
-                                    <p>- Jane Doe</p>
-                                </blockquote>
-                            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="assets/images/girl-image.png" alt="image of a woman" class="rounded-circle mr-3"
+                                height="100" width="100">
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="media">
-                            <div class="d-none d-sm-block">
-                                <img src="assets/images/guy-image.png" alt="image of a man" class="rounded-circle mr-3"
-                                    height="100" width="100">
-                            </div>
-                            <div class="media-body">
-                                <blockquote class="blockquote">
-                                    <p>I haven't been sober for months!</p>
-                                    <p>- John Smith</p>
-                                </blockquote>
-                            </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I've been introduced to more than 10 great international whiskeys I never knew
+                                    about!
+                                </p>
+                                <p>- Jane Doe</p>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
-            </section>
-            <hr>
-
-            <!-- Features -->
-            <section class="features">
-                <div class="row">
-                    <div class="col-12 my-5">
-                        <h2 class="text-uppercase">Features:</h2>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="feature">
-                            <h3>Feature 1:</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
-                                fugiat
-                                similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
-                                est!
-                                Atque
-                                quasi iure dolorum reprehenderit consequatur.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="assets/images/guy-image.png" alt="image of a man" class="rounded-circle mr-3"
+                                height="100" width="100">
                         </div>
-                    </div>
-
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="feature">
-                            <h3>Feature 2:</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
-                                cupiditate!
-                                Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
-                                repellendus
-                                cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
-                        </div>
-                    </div>
-
-                    <div class="col-12 d-md-none d-lg-block col-lg-4">
-                        <div class="feature">
-                            <h3>Feature 3:</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
-                                doloremque
-                                corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
-                                impedit
-                                autem ipsum quod harum.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I haven't been sober for months!</p>
+                                <p>- John Smith</p>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
-            </section>
-            <hr>
+            </div>
+        </section>
+        <hr>
 
-        </article>
+        <!-- Features -->
+        <section class="features">
+            <div class="row">
+                <div class="col-12 my-5">
+                    <h2 class="text-uppercase">Features:</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 1:</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
+                            fugiat
+                            similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
+                            est!
+                            Atque
+                            quasi iure dolorum reprehenderit consequatur.</p>
+                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 2:</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
+                            cupiditate!
+                            Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
+                            repellendus
+                            cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
+                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                    </div>
+                </div>
+
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
+                    <div class="feature">
+                        <h3>Feature 3:</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
+                            doloremque
+                            corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
+                            impedit
+                            autem ipsum quod harum.</p>
+                        <p><a class="btn btn-sm btn-light">Read More</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr>
+
+    </article>
 
 </body>
 
