Removed icons from mobile size screens

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-gifts"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
+                        <h3><i class="fa-solid fa-gifts d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quaerat accusantium,
                             fugiat
                             similique voluptatem placeat? Laboriosam, quae. Quibusdam debitis, quae beatae quia quis
@@ -120,7 +120,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-credit-card"></i> Feature 2</h3>
+                        <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, consequatur
                             cupiditate!
                             Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
@@ -132,7 +132,7 @@
 
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-circle-xmark"></i> Feature 3</h3>
+                        <h3><i class="fa-solid fa-circle-xmark d-none d-sm-line"></i> Feature 3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis, reiciendis
                             doloremque
                             corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
