Link sign up button to modal

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <strong><mark>First one is
                                 free!</mark></strong></p>
 
-                    <button class="btn btn-success btn-lg">Sign up!</button>
+                    <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign up!</button>
                     <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
                             responsibly.</small></p>
                 </section>
@@ -180,7 +180,7 @@
     </article>
 
     <!-- Modal -->
-    <div class="modal" tabindex="-1" role="dialog">
+    <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
