Made jumbotron transparent

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     <div class="container-fluid callout-container">
         <div class="row">
             <div class="col-12">
+
+                <!-- Jumbotron -->
                 <section class="callout jumbotron text-center">
                     <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
                     <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
