Create divider in callout and create block divider section in css

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <!-- Jumbotron -->
                 <section class="callout jumbotron text-center">
                     <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+                    <hr class="block-divider">
                     <p class="lead">Sign up today to start recieving the world's best whiskeys every month.
                         <s class="d-none d-sm-inline">£19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
