Add styles to call to action button and fixed dropdown icon for desktop sized screens

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             Whiskey Drop</a>
 
         <!-- Dropdown Functionality-->
-        <button class="navcar-toggler-icon ml-auto" type="button" data-toggle="collapse"
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
             data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-            aria-label="Togglenavigation"><span class="navbar-toggler-icon"></span>
+            aria-label="Togglenavigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -91,7 +92,7 @@
                         <strong><mark>First one is
                                 free!</mark></strong></p>
 
-                    <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign
+                    <button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sign
                         up!</button>
                     <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
                             responsibly.</small></p>
