Add positioning styles to section headers

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="container quotes-container">
         <section class="quotes">
             <div class="row">
-                <div class="col-12 my-5">
+                <div class="col-12 page-header">
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>
             </div>
@@ -150,7 +150,7 @@
     <div class="container features-container">
         <section class="features">
             <div class="row">
-                <div class="col-12 my-5">
+                <div class="col-12 page-header">
                     <h2 class="text-uppercase">Features:</h2>
                 </div>
             </div>
