Add divider to quotes section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <div class="col-12 page-header">
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>
+                <hr class="block-divider block-divider--short">
             </div>
             <div class="row">
                 <div class="col-12 col-md-6">
