Create white coloured divider and create a divider in features section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     <div class="col-12 page-header">
                         <h2 class="text-uppercase">Features:</h2>
                     </div>
+                    <hr class="block-divider block-divider--short block-divider--white">
                 </div>
 
                 <div class="row">
