Add styles to buttons in features section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 est!
                                 Atque
                                 quasi iure dolorum reprehenderit consequatur.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            <p><a href="/" class="btn btn-sm btn-light">Read More</a></p>
                         </div>
                     </div>
 
@@ -184,7 +184,7 @@
                                 Voluptates dolore eaque qui ducimus perspiciatis cumque natus, deleniti doloremque
                                 repellendus
                                 cupiditate minima ab? Distinctio atque adipisci delectus enim.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            <p><a href="/" class="btn btn-sm btn-light">Read More</a></p>
                         </div>
                     </div>
 
@@ -196,7 +196,7 @@
                                 corrupti accusantium quas error magnam excepturi animi nam est vel ducimus non pariatur
                                 impedit
                                 autem ipsum quod harum.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            <p><a href=/ class="btn btn-sm btn-light">Read More</a></p>
                         </div>
                     </div>
                 </div>
